overlays/development/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app
  namespace: development
spec:
  replicas: 1
