overlays/development/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: development
spec:
  selector:
    app.kubernetes.io/name: dragonfly
  ports:
    - port: 6379
      targetPort: 6379
