overlays/development/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
spec:
  rules:
    - host: course-app-dev.127.0.0.1.sslip.io
